--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -5,12 +5,20 @@
 
 .dialogsItems {
     padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+    border: 2px solid #5a5a5a;
 }
 .dialog {
+    border-radius: 10px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     margin: 10px;
+}
+.dialog:hover {
+    background-color: rgba(133, 133, 133, 0.3);
+
 }
 .dialog a{
     text-decoration: none;
@@ -28,4 +36,28 @@
 }
 .messages {
     margin: 10px;
+    border-radius: 10px;
+    border: 2px solid #5a5a5a;
+    padding: 1px;
+
+}
+.sentMessage {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    padding: 5px;
+}
+.button {
+    margin: 10px 0;
+    align-self: flex-end;
+}
+.button button {
+    padding: 5px 30px;
+}
+.sentMessage textarea {
+    width: 100%;
+    box-sizing: border-box;
+    border-radius: 10px;
+    border: 2px solid #5a5a5a;
 }
