--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,8 +1,10 @@
 
 .myPosts {
-    padding: 0px 10px 10px;
+    padding: 0 10px 10px;
 }
 .posts {
+    display: flex;
+    flex-direction: column-reverse;
     background-color: azure;
 }
 .newPost {
