--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,13 @@ h1, h2, h3, h4, p, a {
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+
 }
 
 .app-wrapper-content {
     margin: 10px;
     grid-area: c;
     background-color: lightblue;
+    border-radius: 10px;
+    border: 2px solid #5a5a5a;
 }
