--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,6 +1,7 @@
 .dialogs {
     display: grid;
     grid-template-columns: 30% 70%;
+
 }
 
 .dialogsItems {
@@ -8,6 +9,19 @@
     margin: 10px;
     border-radius: 10px;
     border: 2px solid #5a5a5a;
+    background-color: white;
+}
+.addDialog {
+    margin: 10px;
+    text-align: center;
+}
+.addDialog img {
+    width: 20px;
+    padding: 10px;
+    border-radius: 20px;
+}
+.addDialog img:hover {
+    background-color: rgba(133, 133, 133, 0.3);
 }
 .dialog {
     border-radius: 10px;
@@ -39,6 +53,7 @@
     border-radius: 10px;
     border: 2px solid #5a5a5a;
     padding: 1px;
+    background-color: azure;
 
 }
 .sentMessage {
