--- a/src/components/Profile/MyPosts/Post/Posts.module.css
+++ b/src/components/Profile/MyPosts/Post/Posts.module.css
@@ -1,17 +1,30 @@
 
 .post{
-    color: brown;
-    background-color: aqua;
-    margin: 10px 0px 10px;
+    color: #a52a2a;
+    background-color: #a1d287;
+    margin: 10px 0 10px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    border: 2px solid #5a5a5a;
+    padding: 5px;
 }
+.cont {
+    margin: 10px 0;
+    display: flex;
+    align-items: center;
+}
+.postMessage {
 
+}
 .userAvatar{
     width: 50px;
     height: 50px;
     border-radius: 30px;
+    margin-right: 10px;
 }
 .like {
-
+    margin: 0 10px 10px 10px;
 }
 .likeLogo {
     width: 15px;
