--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,4 +1,52 @@
+.user {
+    margin: 10px;
+    display: flex;
+    border-radius: 10px;
+    padding: 10px;
+}
+.user:hover {
+    background-color: rgba(133, 133, 133, 0.3);
+}
+.firstUserInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
 .userPhoto {
-    height: 50px;
-    width: 50px;
+    height: 100px;
+    width: 100px;
+    border-radius: 10px;
+}
+.userInfo {
+    margin: 0 10px;
+    display: flex;
+    flex-direction: column;
+
+}
+.page {
+    margin: 10px;
+    cursor: default;
+    padding: 10px;
+    border-radius: 5px;
+}
+.page:hover {
+    background-color: rgba(133, 133, 133, 0.3);
+}
+
+.selectedPage {
+    margin: 10px;
+    font-weight: bolder;
+    cursor: default;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: rgba(133, 133, 133, 0.3);
+}
+.pages {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.followButton {
+
 }
