--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@ h1, h2, h3, h4, p, a {
     font-size: 100%;
     font-weight: normal;
 }
+body {
+    background-color: #02020a;
+}
 
 .app-wrapper {
     display: grid;
@@ -14,7 +17,6 @@ h1, h2, h3, h4, p, a {
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
-
 }
 
 .app-wrapper-content {
@@ -22,5 +24,4 @@ h1, h2, h3, h4, p, a {
     grid-area: c;
     background-color: lightblue;
     border-radius: 10px;
-    border: 2px solid #5a5a5a;
 }
