friends component,  stop submit and selectors

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,6 @@ body {
 .app-wrapper-content {
     margin: 10px;
     grid-area: c;
-    background-color: lightblue;
+    background-color: #add8e6;
     border-radius: 10px;
 }
