--- a/src/components/Navbar/Nav.module.css
+++ b/src/components/Navbar/Nav.module.css
@@ -2,7 +2,7 @@
     margin: 10px 0 10px 10px;
     padding: 20px;
     grid-area: n;
-    background-color: #8aa3fc;
+    background-color: #162147;
     text-align: center;
     border-radius: 10px;
 
