--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -26,3 +26,19 @@
     padding: 5px;
     margin: 10px;
 }
+.authInfo {
+   display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.logoutButton {
+    margin-left: 15px;
+    padding: 5px;
+    background-color: #b3b3b3;
+    border: solid 1px grey;
+    border-radius: 5px;
+}
+.logoutButton:hover {
+    cursor: pointer;
+    background-color: #5a5a5a;
+}
