--- a/src/components/Profile/MyPosts/Post/Posts.module.css
+++ b/src/components/Profile/MyPosts/Post/Posts.module.css
@@ -14,12 +14,18 @@
     margin: 10px 0;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    margin: 10px    ;
 }
 
 .postMessage {
 
 }
-
+.postInfo {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 .userAvatar {
     width: 50px;
     height: 50px;
@@ -33,4 +39,12 @@
 
 .likeLogo {
     width: 15px;
+}
+.delete {
+    align-self: flex-start;
+    margin-left: 15px;
+    padding: 5px;
+    background-color: #b3b3b3;
+    border: solid 1px grey;
+    border-radius: 5px;
 }
