--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -4,32 +4,38 @@
     border-radius: 10px;
     padding: 10px;
 }
+
 .user:hover {
     background-color: rgba(133, 133, 133, 0.3);
 }
+
 .firstUserInfo {
     display: flex;
     flex-direction: column;
     align-items: center;
 
 }
+
 .userPhoto {
     height: 100px;
     width: 100px;
     border-radius: 10px;
 }
+
 .userInfo {
     margin: 0 10px;
     display: flex;
     flex-direction: column;
 
 }
+
 .page {
     margin: 10px;
     cursor: default;
     padding: 10px;
     border-radius: 5px;
 }
+
 .page:hover {
     background-color: rgba(133, 133, 133, 0.3);
 }
@@ -42,11 +48,33 @@
     border-radius: 5px;
     background-color: rgba(133, 133, 133, 0.3);
 }
+
 .pages {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
 }
+
 .followButton {
 
+}
+.turnPageLeft {
+    padding: 3px;
+    height: 24px;
+    border: none;
+    background: transparent;
+}
+.turnPageLeft img {
+    height: 100%;
+
+}
+.turnPageRight {
+    padding: 3px;
+    height: 24px;
+    border: none;
+    background: transparent;
+}
+.turnPageRight img {
+    height: 100%;
 }
