--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -9,10 +9,37 @@
 }
 
 .avatar {
+    position: relative;
+    display: block;
     height: 150px;
     width: 150px;
     border-radius: 10px;
+    z-index: 30;
 }
+
+.cont {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    z-index: 2;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(73, 73, 73, 0.7);
+}
+
+.container:nth-child(1):hover img {
+    z-index: 0;
+    transition: 0.3s all;
+}
+
+/*
+.container:nth-child(2):hover {
+    z-index: 5;
+}
+*/
 
 .name {
     display: flex;
@@ -23,3 +50,44 @@
 .aboutYourself {
     margin-left: 20px;
 }
+.container {
+    position: relative;
+    display: block;
+
+}
+.inputFile {
+    background-image: url("http://cdn.onlinewebfonts.com/svg/img_234775.png");
+    background-size: contain;
+    width: 20px;
+}
+
+.inputFile::-webkit-file-upload-button {
+    visibility: hidden;
+}
+
+.inputFile::before {
+    content: none;
+    color: black;
+    display: inline-block;
+    background: -webkit-linear-gradient(top, #f9f9f9, #e3e3e3);
+    border: 1px solid #999;
+    border-radius: 3px;
+    padding: 5px 8px;
+    outline: none;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    cursor: pointer;
+    text-shadow: 1px 1px #fff;
+    font-weight: 700;
+    font-size: 10pt;
+}
+
+
+.inputFile:active {
+    outline: 0;
+}
+
+.inputFile:active::before {
+    background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+}
+
