--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -41,6 +41,17 @@
     flex-flow: row wrap;
     padding: 10px;
 }
+.profileDataComp {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-flow: row wrap;
+    padding: 10px;
+}
+.profileDataComp button {
+    margin: 10px;
+    padding: 3px;
+}
 .status {
 
 }
@@ -59,6 +70,7 @@
     margin: 10px;
 }
 .photoContainer {
+    justify-self: flex-start;
     position: relative;
     display: block;
     height: 150px;
@@ -102,8 +114,7 @@
 
 .contacts {
     display: flex;
-    flex-flow: row;
-    align-items: center;
+    flex-flow: column;
     margin-left: 20px;
 }
 .contact {
@@ -117,6 +128,7 @@
 .form {
     display: flex;
     flex-direction: column;
+
 }
 .formEl {
     margin: 10px;
@@ -126,6 +138,12 @@
 }
 .inputs {
     display: flex;
+    flex-flow: row wrap;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+.fields {
+    margin-left: 30px;
 }
 .formButtons {
     display: flex;
@@ -133,4 +151,26 @@
 }
 .formButton{
     margin: 10px;
+}
+.field {
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+.fieldEl {
+    border-radius: 5px;
+    padding: 5px;
+    border: white 1px solid;
+
+}
+.fieldTitle{
+    text-align: center;
+}
+.error {
+    border-radius: 5px;
+    color: red;
+    text-align: center;
+    padding: 3px;
+    font-size: 15px;
 }
