--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,106 +1,56 @@
-.header{
-    margin: 10px 10px 0;
-    padding: 5px;
-    grid-area: h;
+header {
+    height: 60px;
     background-color: gray;
-    background-size: 400px 400px;
+}
+
+.header {
+    max-width: 1200px;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-radius: 10px;
+    margin: 0 auto;
+    padding: 10px;
 }
-.headerBlack {
-    background-color: #211f1f;
 
+.headerBlack {
+    background-color: #474B4F;
     color: wheat;
 }
+.menuButton {
+    background-color: transparent;
+    border: none;
+    margin-top: 5px;
+    margin-bottom: 0;
+    outline: none;
+}
+
 .header img {
     width: 40px;
     height: 40px;
     margin-right: 10px;
     border-radius: 10px;
 }
+
+.cont {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .logo {
+    margin-left: 10px;
     display: flex;
     align-items: center;
 }
+
 .auth {
     text-align: center;
     border-radius: 10px;
-    padding: 5px;
-    margin: 10px;
 }
+
 .authInfo {
-   display: flex;
+    display: flex;
     justify-content: space-between;
     align-items: center;
-}
-.logoutButton {
-    margin-left: 15px;
-    padding: 5px;
-    background-color: #b3b3b3;
-    border: solid 1px grey;
-    border-radius: 5px;
-}
-.logoutButton:hover {
-    cursor: pointer;
-    background-color: #5a5a5a;
-}
-
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {display:none;}
-
-/* The slider */
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
-
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-}
-
-input:checked + .slider {
-    background-color: #2196F3;
-}
-
-input:focus + .slider {
-    box-shadow: 0 0 1px #2196f3;
-}
-
-input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-    border-radius: 34px;
-}
-
-.slider.round:before {
-    border-radius: 50%;
 }
