--- a/src/components/Navbar/Nav.module.css
+++ b/src/components/Navbar/Nav.module.css
@@ -1,7 +1,6 @@
 .navbar {
     margin: 10px 0 10px 10px;
     padding: 20px;
-    grid-area: n;
     background-color: #162147;
     text-align: center;
     border-radius: 10px;
@@ -12,7 +11,7 @@
     border-radius: 0;
 }
 .navbarBlack {
-    background-color: #2d2a2a;
+    background-color: #474B4F;
     color: #86C232;
 }
 
