--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -5,7 +5,10 @@
     background-size: cover;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-
+}
+.backM {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
 
 .avatar {
@@ -36,16 +39,20 @@
 .photoContainer {
     margin-bottom: 20px;
 }
-
+hr {
+    margin: 0 10px;
+    border: #86C232 1px solid;
+}
 .profileData {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     flex-flow: row wrap;
-    padding: 10px;
+    padding: 10px 10px 0;
 }
 .profileDataM {
     justify-content: center;
+    align-items: center;
 }
 .profileDataComp {
     display: flex;
@@ -66,7 +73,10 @@
 }
 .aboutYourself {
     text-align: center;
-    margin-left: 20px;
+    margin: 10px 0 20px 20px;
+}
+.aboutYourselfM {
+    margin: 0 auto;
 }
 .fullName {
     font-weight: bold;
@@ -122,11 +132,22 @@
 }
 .contact {
     display: flex;
-    justify-content: flex-start;
-    margin: 5px;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5px 5px 10px 40px;
 }
-.contact span {
-    margin-right: 10px;
+.contactsM {
+    margin: 0 auto;
+}
+.contactM {
+    margin-left: 0;
+}
+.contact img {
+    margin-right: 20px;
+}
+.contactRef {
+    width: 100%;
+    text-align: center;
 }
 .form {
     display: flex;
@@ -183,6 +204,7 @@ a {
     text-decoration: none;
     color: black;
     font-weight: 550;
+    justify-self: flex-end;
 }
 a:hover {
     color: #86C232;
