--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body {
 .app-wrapper-content {
     width: 100%;
     margin: 10px;
-    background-color: #add8e6;
+    background-color: #FBEEC1;
     border-radius: 10px;
 }
 .app-wrapper-content-black {
