--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -83,17 +83,22 @@ hr {
 }
 .aboutYourself {
     text-align: center;
-    margin: 10px 0 20px 20px;
+    margin: 10px 0 20px 10px;
 }
 .aboutYourselfM {
     margin: 0 auto;
 }
 .fullName {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
     font-weight: bold;
     margin: 10px;
 }
+.fullName img {
+    margin-right: 20px;
+}
 .photoContainer {
-    justify-self: flex-start;
     position: relative;
     display: block;
     height: 150px;
@@ -138,13 +143,13 @@ hr {
 .contacts {
     display: flex;
     flex-flow: column;
-    margin-left: 20px;
+    margin-left: 15px;
 }
 .contact {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 5px 5px 10px 40px;
+    margin: 5px 5px 10px 0;
 }
 .contactsM {
     margin: 0 auto;
