--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -10,7 +10,7 @@
     flex-direction: column;
 }
 .dialogsBlack {
-
+    
 }
 .dialogsItems {
     padding: 10px;
@@ -75,6 +75,9 @@
     margin: 10px;
     border-radius: 10px;
     padding: 1px;
+}
+.messagesCont {
+    overflow: auto;
 }
 .messagesBlack {
     background-color: #636363;
