--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 header {
     top: 0;
-    height: 60px;
+    height: 100%;
     background-color: #659DBD;
     color: #FBEEC1;
     position: sticky;
